--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -1,6 +1,8 @@
 ---
 // Remove base path if it exists
-const pathWithoutBase = Astro.url.pathname.replace(new RegExp(`^${import.meta.env.BASE_URL}`), "") || "/";
+const pathWithoutBase =
+  Astro.url.pathname.replace(new RegExp(`^${import.meta.env.BASE_URL}`), "") ||
+  "/";
 
 // Remove trailing slash if exists
 const currentUrlPath = pathWithoutBase.replace(/\/+$/, "");
