--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,11 +12,14 @@ import { SITE } from "@/config";
 const { pathname } = Astro.url;
 
 // Remove base path if it exists
-const pathWithoutBase = pathname.replace(new RegExp(`^${import.meta.env.BASE_URL}`), "") || "/";
+const pathWithoutBase =
+  pathname.replace(new RegExp(`^${import.meta.env.BASE_URL}`), "") || "/";
 
 // Remove trailing slash from current pathname if exists
 const currentPath =
-  pathWithoutBase.endsWith("/") && pathWithoutBase !== "/" ? pathWithoutBase.slice(0, -1) : pathWithoutBase;
+  pathWithoutBase.endsWith("/") && pathWithoutBase !== "/"
+    ? pathWithoutBase.slice(0, -1)
+    : pathWithoutBase;
 
 const isActive = (path: string) => {
   const currentPathArray = currentPath.split("/").filter(p => p.trim());
